--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^3.0.2",
+    "@astrojs/node": "^6.0.2",
     "@astrojs/react": "^3.0.2",
     "@fontsource-variable/dancing-script": "^5.0.8",
     "@fontsource-variable/open-sans": "^5.0.13",
