--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^3.0.2",
-    "@astrojs/node": "^6.0.2",
-    "@astrojs/react": "^3.0.2",
+    "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/node": "^8.3.3",
+    "@astrojs/react": "^3.6.2",
     "@fontsource-variable/dancing-script": "^5.0.8",
     "@fontsource-variable/open-sans": "^5.0.13",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "astro": "^3.0.12",
+    "astro": "^4.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
